dhall/tests/type-inference/failure/unit/UnionTypeDuplicateVariants1.txt
Type error: error: UnionTypeDuplicateField
 --> <current file>:1:1
  |
1 | <x | x>
  | ^^^^^^^ UnionTypeDuplicateField
  |
